Reupload on github

--- a/.gitignore
+++ b/.gitignore
@@ -1,52 +1,15 @@
-# Prerequisites
-*.d
+.vscode/*.json
+src/*.o
+src/data_test
+src/chemins_main
+src/data_test
+src/test_data.c
+src/test_data
+src/simulation
 
-# Object files
-*.o
-*.ko
-*.obj
-*.elf
 
-# Linker output
-*.ilk
-*.map
-*.exp
-
-# Precompiled Headers
-*.gch
-*.pch
-
-# Libraries
-*.lib
-*.a
-*.la
-*.lo
-
-# Shared objects (inc. Windows DLLs)
-*.dll
-*.so
-*.so.*
-*.dylib
-
-# Executables
-*.exe
-*.out
-*.app
-*.i*86
-*.x86_64
-*.hex
-
-# Debug files
-*.dSYM/
-*.su
-*.idb
-*.pdb
-
-# Kernel Module Compile Results
-*.mod*
-*.cmd
-.tmp_versions/
-modules.order
-Module.symvers
-Mkfile.old
-dkms.conf
+test/test_structure
+test/test_distance
+test/test_data
+test/test_a_etoile
+test/test_file
